--- a/Sqlite_DB/Patientsinfo.ui
+++ b/Sqlite_DB/Patientsinfo.ui
@@ -153,6 +153,19 @@
      <string>save</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>370</y>
+      <width>83</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>NEXT</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QLabel" name="label_sec_status">
    <property name="geometry">
