ANish record, patient and staff

--- a/Sqlite_DB/emergency.ui
+++ b/Sqlite_DB/emergency.ui
@@ -69,6 +69,19 @@
     <string>SEARCH:</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_back">
+   <property name="geometry">
+    <rect>
+     <x>810</x>
+     <y>500</y>
+     <width>93</width>
+     <height>29</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
