--- a/Sqlite_DB/staffinfo.ui
+++ b/Sqlite_DB/staffinfo.ui
@@ -1,42 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>secDialog</class>
- <widget class="QDialog" name="secDialog">
+ <class>StaffInfo</class>
+ <widget class="QDialog" name="StaffInfo">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1075</width>
+    <width>1065</width>
     <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="label_third">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>600</y>
-     <width>63</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TextLabel</string>
-   </property>
-  </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>100</y>
+     <x>540</x>
+     <y>60</y>
      <width>521</width>
-     <height>441</height>
+     <height>461</height>
     </rect>
    </property>
    <property name="title">
-    <string>GroupBox</string>
+    <string>                                            Staff Registration</string>
    </property>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
@@ -156,84 +143,51 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>210</x>
       <y>370</y>
       <width>101</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>save</string>
+     <string>Save</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>290</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Specialist:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="txt_phone_2">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>290</y>
+      <width>251</width>
+      <height>28</height>
+     </rect>
     </property>
    </widget>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>970</x>
+     <x>940</x>
      <y>20</y>
-     <width>83</width>
+     <width>93</width>
      <height>29</height>
     </rect>
    </property>
    <property name="text">
     <string>Back</string>
-   </property>
-  </widget>
-  <widget class="QTableView" name="tableView">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>60</y>
-     <width>561</width>
-     <height>531</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_3">
-   <property name="geometry">
-    <rect>
-     <x>322</x>
-     <y>600</y>
-     <width>131</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>LOAD TABLE</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="cbColumnas">
-   <property name="geometry">
-    <rect>
-     <x>560</x>
-     <y>20</y>
-     <width>82</width>
-     <height>28</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>20</y>
-     <width>341</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>20</y>
-     <width>81</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Search:</string>
    </property>
   </widget>
  </widget>
