--- a/Sqlite_DB/doctor.ui
+++ b/Sqlite_DB/doctor.ui
@@ -16,8 +16,8 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>60</y>
+     <x>520</x>
+     <y>90</y>
      <width>521</width>
      <height>461</height>
     </rect>
@@ -53,42 +53,19 @@
      <rect>
       <x>14</x>
       <y>96</y>
-      <width>40</width>
+      <width>91</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>Name</string>
+     <string>Full name</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="txt_name">
     <property name="geometry">
      <rect>
-      <x>86</x>
+      <x>90</x>
       <y>96</y>
-      <width>251</width>
-      <height>28</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>14</x>
-      <y>143</y>
-      <width>58</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Surname</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="txt_surname">
-    <property name="geometry">
-     <rect>
-      <x>86</x>
-      <y>143</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -98,7 +75,7 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>190</y>
+      <y>150</y>
       <width>27</width>
       <height>20</height>
      </rect>
@@ -111,7 +88,7 @@
     <property name="geometry">
      <rect>
       <x>86</x>
-      <y>190</y>
+      <y>150</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -121,7 +98,7 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>237</y>
+      <y>200</y>
       <width>65</width>
       <height>20</height>
      </rect>
@@ -134,7 +111,7 @@
     <property name="geometry">
      <rect>
       <x>86</x>
-      <y>237</y>
+      <y>200</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -150,14 +127,14 @@
      </rect>
     </property>
     <property name="text">
-     <string>save</string>
+     <string>Save</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>290</y>
+      <y>250</y>
       <width>71</width>
       <height>21</height>
      </rect>
@@ -170,10 +147,33 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>290</y>
+      <y>250</y>
       <width>251</width>
       <height>28</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="txt_phone_3">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>300</y>
+      <width>251</width>
+      <height>28</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>300</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Email:</string>
     </property>
    </widget>
   </widget>
@@ -188,6 +188,62 @@
    </property>
    <property name="text">
     <string>Back</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_sec_status">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>590</y>
+     <width>63</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QTableView" name="tableView">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>100</y>
+     <width>441</width>
+     <height>471</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_3">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>580</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>LOAD TABLE</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="cbColumnas">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>20</y>
+     <width>82</width>
+     <height>28</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>20</y>
+     <width>321</width>
+     <height>31</height>
+    </rect>
    </property>
   </widget>
  </widget>
