--- a/Sqlite_DB/record.ui
+++ b/Sqlite_DB/record.ui
@@ -74,7 +74,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Cancel</string>
+    <string>Back</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
