--- a/Sqlite_DB/Patientsinfo.ui
+++ b/Sqlite_DB/Patientsinfo.ui
@@ -6,18 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>858</width>
-    <height>555</height>
+    <width>1065</width>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Hospital Management System</string>
   </property>
   <widget class="QLabel" name="label_sec_status">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>450</y>
+     <x>40</x>
+     <y>590</y>
      <width>63</width>
      <height>20</height>
     </rect>
@@ -29,33 +29,73 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>250</y>
-     <width>241</width>
-     <height>71</height>
+     <x>700</x>
+     <y>340</y>
+     <width>221</width>
+     <height>191</height>
     </rect>
    </property>
    <property name="text">
-    <string>Records</string>
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../store.png</normaloff>
+     <selectedoff>../../../../Documents/store.png</selectedoff>../../../store.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>180</width>
+     <height>180</height>
+    </size>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>120</y>
-     <width>241</width>
-     <height>71</height>
+     <x>700</x>
+     <y>90</y>
+     <width>221</width>
+     <height>191</height>
     </rect>
    </property>
    <property name="text">
-    <string>Emergency</string>
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../../Documents/emergency.png</normaloff>
+     <selectedoff>../../../../Documents/emergency.png</selectedoff>../../../../Documents/emergency.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>180</width>
+     <height>180</height>
+    </size>
+   </property>
+   <property name="shortcut">
+    <string notr="true"/>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
+   </property>
+   <property name="autoExclusive">
+    <bool>true</bool>
+   </property>
+   <property name="default">
+    <bool>false</bool>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>380</x>
      <y>20</y>
      <width>341</width>
      <height>41</height>
@@ -75,10 +115,10 @@
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>533</x>
      <y>100</y>
      <width>20</width>
-     <height>251</height>
+     <height>471</height>
     </rect>
    </property>
    <property name="orientation">
@@ -88,10 +128,10 @@
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>140</y>
-     <width>241</width>
-     <height>121</height>
+     <x>70</x>
+     <y>180</y>
+     <width>291</width>
+     <height>131</height>
     </rect>
    </property>
    <property name="html">
@@ -106,8 +146,8 @@ hr { height: 1px; border-width: 0; }
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>622</x>
-     <y>470</y>
+     <x>840</x>
+     <y>610</y>
      <width>201</width>
      <height>21</height>
     </rect>
