--- a/Sqlite_DB/doctor.ui
+++ b/Sqlite_DB/doctor.ui
@@ -11,27 +11,35 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Doctor Info</string>
   </property>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>90</y>
-     <width>521</width>
-     <height>461</height>
+     <x>570</x>
+     <y>70</y>
+     <width>501</width>
+     <height>521</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="title">
-    <string>                                            Doctor Registration</string>
+    <string>Doctor Registration</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>49</y>
-      <width>16</width>
-      <height>20</height>
+      <y>50</y>
+      <width>41</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -41,8 +49,8 @@
    <widget class="QLineEdit" name="txt_id">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>49</y>
+      <x>160</x>
+      <y>50</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -52,7 +60,7 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>96</y>
+      <y>110</y>
       <width>91</width>
       <height>20</height>
      </rect>
@@ -64,8 +72,8 @@
    <widget class="QLineEdit" name="txt_name">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>96</y>
+      <x>160</x>
+      <y>110</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -75,9 +83,9 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>150</y>
-      <width>27</width>
-      <height>20</height>
+      <y>170</y>
+      <width>51</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -87,8 +95,8 @@
    <widget class="QLineEdit" name="txt_age">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>150</y>
+      <x>160</x>
+      <y>170</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -97,10 +105,10 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>200</y>
-      <width>65</width>
-      <height>20</height>
+      <x>10</x>
+      <y>230</y>
+      <width>111</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -110,8 +118,8 @@
    <widget class="QLineEdit" name="txt_phone">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>200</y>
+      <x>160</x>
+      <y>230</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -120,8 +128,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>370</y>
+      <x>30</x>
+      <y>460</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -134,20 +142,20 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>250</y>
-      <width>71</width>
-      <height>21</height>
+      <y>290</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Specialist:</string>
+     <string>Specialist</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="txt_phone_2">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>250</y>
+      <x>160</x>
+      <y>290</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -156,8 +164,8 @@
    <widget class="QLineEdit" name="txt_phone_3">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>300</y>
+      <x>160</x>
+      <y>350</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -167,13 +175,39 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>300</y>
-      <width>71</width>
-      <height>21</height>
+      <y>350</y>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Email:</string>
+     <string>Email</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_5">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>460</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Delete</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_6">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>460</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Update</string>
     </property>
    </widget>
   </widget>
@@ -244,6 +278,40 @@
      <width>321</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Normal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>20</y>
+     <width>63</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Search</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>-30</y>
+     <width>20</width>
+     <height>691</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
    </property>
   </widget>
  </widget>
