--- a/Sqlite_DB/emergency.ui
+++ b/Sqlite_DB/emergency.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>934</width>
-    <height>578</height>
+    <width>1065</width>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Emergency Alert System</string>
   </property>
   <widget class="QPushButton" name="pushButton_load_table">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>510</y>
-     <width>83</width>
-     <height>29</height>
+     <x>540</x>
+     <y>530</y>
+     <width>111</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -29,7 +29,7 @@
   <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>300</x>
      <y>100</y>
      <width>591</width>
      <height>401</height>
@@ -39,7 +39,7 @@
   <widget class="QComboBox" name="cbColumnas">
    <property name="geometry">
     <rect>
-     <x>810</x>
+     <x>900</x>
      <y>30</y>
      <width>82</width>
      <height>28</height>
@@ -49,37 +49,66 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>290</x>
      <y>30</y>
-     <width>671</width>
-     <height>28</height>
+     <width>591</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>230</x>
      <y>30</y>
      <width>81</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>SEARCH:</string>
+    <string>SEARCH</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_back">
    <property name="geometry">
     <rect>
-     <x>810</x>
-     <y>500</y>
+     <x>930</x>
+     <y>530</y>
      <width>93</width>
      <height>29</height>
     </rect>
    </property>
    <property name="text">
     <string>Back</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>130</y>
+     <width>351</width>
+     <height>271</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../alertsystem.jpg</pixmap>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>930</x>
+     <y>380</y>
+     <width>93</width>
+     <height>29</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Send</string>
    </property>
   </widget>
  </widget>
