--- a/Sqlite_DB/login.ui
+++ b/Sqlite_DB/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1065</width>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,14 +17,15 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>440</y>
+      <x>40</x>
+      <y>540</y>
       <width>411</width>
       <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <pointsize>12</pointsize>
       <bold>true</bold>
      </font>
     </property>
@@ -35,34 +36,37 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>100</y>
-      <width>341</width>
-      <height>331</height>
+      <x>590</x>
+      <y>110</y>
+      <width>411</width>
+      <height>431</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>11</pointsize>
+      <pointsize>13</pointsize>
       <bold>true</bold>
       <underline>false</underline>
      </font>
     </property>
     <property name="title">
-     <string>                            Login</string>
+     <string>Login for Admin</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>270</y>
-       <width>83</width>
-       <height>29</height>
+       <x>160</x>
+       <y>340</y>
+       <width>121</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>10</pointsize>
+       <pointsize>12</pointsize>
        <bold>true</bold>
        <underline>false</underline>
       </font>
@@ -76,13 +80,13 @@
       <rect>
        <x>20</x>
        <y>60</y>
-       <width>81</width>
+       <width>101</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>10</pointsize>
+       <pointsize>12</pointsize>
        <bold>false</bold>
        <underline>false</underline>
       </font>
@@ -95,14 +99,14 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>160</y>
+       <y>190</y>
        <width>81</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>10</pointsize>
+       <pointsize>12</pointsize>
        <bold>false</bold>
        <underline>false</underline>
       </font>
@@ -116,13 +120,13 @@
       <rect>
        <x>20</x>
        <y>100</y>
-       <width>201</width>
-       <height>31</height>
+       <width>281</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>10</pointsize>
+       <pointsize>12</pointsize>
        <bold>false</bold>
        <underline>false</underline>
       </font>
@@ -132,9 +136,9 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>200</y>
-       <width>201</width>
-       <height>31</height>
+       <y>230</y>
+       <width>281</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -152,15 +156,15 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>363</x>
       <y>20</y>
-      <width>341</width>
-      <height>41</height>
+      <width>401</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>13</pointsize>
+      <pointsize>16</pointsize>
       <bold>true</bold>
       <underline>true</underline>
      </font>
@@ -172,10 +176,10 @@
    <widget class="QLabel" name="label_pic">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>80</y>
-      <width>301</width>
-      <height>331</height>
+      <x>130</x>
+      <y>100</y>
+      <width>501</width>
+      <height>391</height>
      </rect>
     </property>
     <property name="text">
@@ -191,7 +195,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1065</width>
      <height>26</height>
     </rect>
    </property>
