--- a/Sqlite_DB/record.ui
+++ b/Sqlite_DB/record.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1198</width>
-    <height>671</height>
+    <width>1065</width>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Record System</string>
   </property>
   <widget class="QRadioButton" name="radioButton">
    <property name="geometry">
     <rect>
-     <x>700</x>
+     <x>740</x>
      <y>290</y>
-     <width>110</width>
-     <height>24</height>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
@@ -30,12 +30,22 @@
    <property name="text">
     <string>Patient</string>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../../Documents/patient.png</normaloff>../../../../Documents/patient.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>130</y>
+     <x>590</x>
+     <y>100</y>
      <width>141</width>
      <height>31</height>
     </rect>
@@ -54,10 +64,10 @@
   <widget class="QPushButton" name="pushButton_1">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>420</y>
-     <width>121</width>
-     <height>41</height>
+     <x>440</x>
+     <y>450</y>
+     <width>151</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -67,10 +77,10 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>670</x>
-     <y>420</y>
-     <width>121</width>
-     <height>41</height>
+     <x>750</x>
+     <y>450</y>
+     <width>151</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -80,7 +90,7 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>280</x>
+     <x>373</x>
      <y>20</y>
      <width>341</width>
      <height>41</height>
@@ -101,9 +111,9 @@
    <property name="geometry">
     <rect>
      <x>480</x>
-     <y>210</y>
-     <width>110</width>
-     <height>24</height>
+     <y>170</y>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
@@ -114,14 +124,24 @@
    <property name="text">
     <string>Doctor</string>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../../Documents/doctor.png</normaloff>../../../../Documents/doctor.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
   </widget>
   <widget class="QRadioButton" name="radioButton_9">
    <property name="geometry">
     <rect>
      <x>480</x>
      <y>290</y>
-     <width>110</width>
-     <height>24</height>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
@@ -132,14 +152,24 @@
    <property name="text">
     <string>Nurse</string>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../../Documents/nurse.png</normaloff>../../../../Documents/nurse.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
   </widget>
   <widget class="QRadioButton" name="radioButton_11">
    <property name="geometry">
     <rect>
-     <x>700</x>
-     <y>210</y>
-     <width>110</width>
-     <height>24</height>
+     <x>740</x>
+     <y>170</y>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
@@ -150,14 +180,24 @@
    <property name="text">
     <string>Staff</string>
    </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../../Documents/staff.png</normaloff>../../../../Documents/staff.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>50</width>
+     <height>50</height>
+    </size>
+   </property>
   </widget>
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>343</x>
-     <y>120</y>
+     <x>370</x>
+     <y>100</y>
      <width>20</width>
-     <height>331</height>
+     <height>491</height>
     </rect>
    </property>
    <property name="orientation">
@@ -185,6 +225,25 @@ p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p align=&quot;justify&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Hello. You are welcome to our recording system. Here you can keep the record of doctor, nurse, patients and staff by clicking in the respective button. If you want to register member of the respective position, then click on it.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>790</x>
+     <y>600</y>
+     <width>201</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>       Admin Dashboard</string>
    </property>
   </widget>
  </widget>
