--- a/Sqlite_DB/doctor.ui
+++ b/Sqlite_DB/doctor.ui
@@ -11,35 +11,27 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Doctor Info</string>
+   <string>Dialog</string>
   </property>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>70</y>
-     <width>501</width>
-     <height>521</height>
+     <x>520</x>
+     <y>90</y>
+     <width>521</width>
+     <height>461</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
    <property name="title">
-    <string>Doctor Registration</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <string>                                            Doctor Registration</string>
    </property>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>50</y>
-      <width>41</width>
-      <height>31</height>
+      <y>49</y>
+      <width>16</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -49,8 +41,8 @@
    <widget class="QLineEdit" name="txt_id">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>50</y>
+      <x>86</x>
+      <y>49</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -60,7 +52,7 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>110</y>
+      <y>96</y>
       <width>91</width>
       <height>20</height>
      </rect>
@@ -72,8 +64,8 @@
    <widget class="QLineEdit" name="txt_name">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>110</y>
+      <x>90</x>
+      <y>96</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -83,9 +75,9 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>170</y>
-      <width>51</width>
-      <height>31</height>
+      <y>150</y>
+      <width>27</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -95,8 +87,8 @@
    <widget class="QLineEdit" name="txt_age">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>170</y>
+      <x>86</x>
+      <y>150</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -105,10 +97,10 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>230</y>
-      <width>111</width>
-      <height>31</height>
+      <x>14</x>
+      <y>200</y>
+      <width>65</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -118,8 +110,8 @@
    <widget class="QLineEdit" name="txt_phone">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>230</y>
+      <x>86</x>
+      <y>200</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -128,8 +120,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>460</y>
+      <x>210</x>
+      <y>370</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -142,20 +134,20 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>290</y>
-      <width>101</width>
-      <height>31</height>
+      <y>250</y>
+      <width>71</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Specialist</string>
+     <string>Specialist:</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="txt_phone_2">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>290</y>
+      <x>90</x>
+      <y>250</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -164,8 +156,8 @@
    <widget class="QLineEdit" name="txt_phone_3">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>350</y>
+      <x>100</x>
+      <y>300</y>
       <width>251</width>
       <height>28</height>
      </rect>
@@ -175,39 +167,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>350</y>
-      <width>91</width>
-      <height>31</height>
+      <y>300</y>
+      <width>71</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Email</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_5">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>460</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Delete</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_6">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>460</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Update</string>
+     <string>Email:</string>
     </property>
    </widget>
   </widget>
@@ -278,40 +244,6 @@
      <width>321</width>
      <height>31</height>
     </rect>
-   </property>
-   <property name="echoMode">
-    <enum>QLineEdit::Normal</enum>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>20</y>
-     <width>63</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Search</string>
-   </property>
-  </widget>
-  <widget class="Line" name="line">
-   <property name="geometry">
-    <rect>
-     <x>560</x>
-     <y>-30</y>
-     <width>20</width>
-     <height>691</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Vertical</enum>
    </property>
   </widget>
  </widget>
