--- a/Sqlite_DB/login.ui
+++ b/Sqlite_DB/login.ui
@@ -17,15 +17,15 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>540</y>
+      <x>140</x>
+      <y>530</y>
       <width>411</width>
       <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>12</pointsize>
+      <pointsize>13</pointsize>
       <bold>true</bold>
      </font>
     </property>
@@ -36,10 +36,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>110</y>
-      <width>411</width>
-      <height>431</height>
+      <x>620</x>
+      <y>90</y>
+      <width>431</width>
+      <height>441</height>
      </rect>
     </property>
     <property name="font">
@@ -50,17 +50,14 @@
      </font>
     </property>
     <property name="title">
-     <string>Login for Admin</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <string>                       Login for Admin</string>
     </property>
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>340</y>
-       <width>121</width>
+       <x>190</x>
+       <y>360</y>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -79,9 +76,9 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>60</y>
-       <width>101</width>
-       <height>31</height>
+       <y>70</y>
+       <width>111</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -99,7 +96,7 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>190</y>
+       <y>220</y>
        <width>81</width>
        <height>31</height>
       </rect>
@@ -119,8 +116,8 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>100</y>
-       <width>281</width>
+       <y>120</y>
+       <width>241</width>
        <height>41</height>
       </rect>
      </property>
@@ -131,19 +128,22 @@
        <underline>false</underline>
       </font>
      </property>
+     <property name="placeholderText">
+      <string>Username</string>
+     </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_password">
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>230</y>
-       <width>281</width>
-       <height>41</height>
+       <y>270</y>
+       <width>251</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>10</pointsize>
+       <pointsize>12</pointsize>
        <bold>false</bold>
        <underline>false</underline>
       </font>
@@ -151,20 +151,23 @@
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
      </property>
+     <property name="placeholderText">
+      <string>Password</string>
+     </property>
     </widget>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>363</x>
-      <y>20</y>
+      <x>390</x>
+      <y>-10</y>
       <width>401</width>
-      <height>51</height>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>16</pointsize>
+      <pointsize>17</pointsize>
       <bold>true</bold>
       <underline>true</underline>
      </font>
@@ -176,10 +179,10 @@
    <widget class="QLabel" name="label_pic">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>100</y>
-      <width>501</width>
-      <height>391</height>
+      <x>150</x>
+      <y>120</y>
+      <width>301</width>
+      <height>331</height>
      </rect>
     </property>
     <property name="text">
@@ -189,6 +192,19 @@
      <pixmap>log.jpg</pixmap>
     </property>
    </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>60</y>
+      <width>20</width>
+      <height>551</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -196,7 +212,7 @@
      <x>0</x>
      <y>0</y>
      <width>1065</width>
-     <height>26</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
