--- a/Sqlite_DB/secdialog.ui
+++ b/Sqlite_DB/secdialog.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1065</width>
+    <width>1075</width>
     <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Patient Info</string>
+   <string>Dialog</string>
   </property>
   <widget class="QLabel" name="label_third">
    <property name="geometry">
