--- a/Sqlite_DB/login.ui
+++ b/Sqlite_DB/login.ui
@@ -37,9 +37,9 @@
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>110</y>
+      <y>80</y>
       <width>411</width>
-      <height>431</height>
+      <height>381</height>
      </rect>
     </property>
     <property name="font">
@@ -59,7 +59,7 @@
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>340</y>
+       <y>320</y>
        <width>121</width>
        <height>41</height>
       </rect>
@@ -169,7 +169,7 @@
     <property name="geometry">
      <rect>
       <x>363</x>
-      <y>20</y>
+      <y>10</y>
       <width>401</width>
       <height>51</height>
      </rect>
@@ -188,8 +188,8 @@
    <widget class="QLabel" name="label_pic">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>100</y>
+      <x>100</x>
+      <y>90</y>
       <width>501</width>
       <height>391</height>
      </rect>
@@ -202,7 +202,7 @@
     <property name="geometry">
      <rect>
       <x>600</x>
-      <y>210</y>
+      <y>180</y>
       <width>41</width>
       <height>41</height>
      </rect>
@@ -221,7 +221,7 @@
     <property name="geometry">
      <rect>
       <x>600</x>
-      <y>340</y>
+      <y>310</y>
       <width>41</width>
       <height>41</height>
      </rect>
@@ -234,6 +234,42 @@
     </property>
     <property name="scaledContents">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>540</y>
+      <width>191</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Patient</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>540</y>
+      <width>191</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Doctor</string>
     </property>
    </widget>
   </widget>
