--- a/Sqlite_DB/doctorlogin.ui
+++ b/Sqlite_DB/doctorlogin.ui
@@ -197,7 +197,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="img.qrc">:/img/login.png</pixmap>
+    <pixmap resource="img.qrc">:/img/Downloads/log.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="label">
