--- a/Sqlite_DB/emergency.ui
+++ b/Sqlite_DB/emergency.ui
@@ -17,10 +17,15 @@
    <property name="geometry">
     <rect>
      <x>540</x>
-     <y>530</y>
-     <width>111</width>
-     <height>31</height>
+     <y>510</y>
+     <width>121</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>LOAD TABLE</string>
@@ -35,6 +40,11 @@
      <height>401</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
   </widget>
   <widget class="QComboBox" name="cbColumnas">
    <property name="geometry">
@@ -42,41 +52,46 @@
      <x>900</x>
      <y>30</y>
      <width>82</width>
-     <height>28</height>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>320</x>
      <y>30</y>
-     <width>591</width>
-     <height>31</height>
+     <width>550</width>
+     <height>41</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>230</x>
-     <y>30</y>
-     <width>81</width>
-     <height>31</height>
-    </rect>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
-   <property name="text">
-    <string>SEARCH</string>
+   <property name="placeholderText">
+    <string>Search</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_back">
    <property name="geometry">
     <rect>
-     <x>930</x>
-     <y>530</y>
-     <width>93</width>
-     <height>29</height>
+     <x>650</x>
+     <y>590</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Back</string>
@@ -95,23 +110,30 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../../../alertsystem.jpg</pixmap>
+    <pixmap resource="img.qrc">:/img/img/alertsystem.jfif</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>930</x>
-     <y>380</y>
-     <width>93</width>
-     <height>29</height>
+     <x>440</x>
+     <y>590</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Send</string>
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="img.qrc"/>
+ </resources>
  <connections/>
 </ui>
