--- a/Sqlite_DB/nurseinfo.ui
+++ b/Sqlite_DB/nurseinfo.ui
@@ -17,10 +17,15 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>80</y>
+     <y>30</y>
      <width>481</width>
-     <height>461</height>
+     <height>511</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="title">
     <string>                                              Nurse Registration</string>
@@ -28,10 +33,10 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>49</y>
-      <width>16</width>
-      <height>20</height>
+      <x>20</x>
+      <y>50</y>
+      <width>51</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -41,20 +46,23 @@
    <widget class="QLineEdit" name="txt_id">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>49</y>
+      <x>170</x>
+      <y>50</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>ID</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>96</y>
-      <width>40</width>
-      <height>20</height>
+      <x>20</x>
+      <y>110</y>
+      <width>61</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -64,20 +72,23 @@
    <widget class="QLineEdit" name="txt_name">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>96</y>
+      <x>170</x>
+      <y>110</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Name</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>143</y>
-      <width>58</width>
-      <height>20</height>
+      <x>20</x>
+      <y>170</y>
+      <width>91</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -87,20 +98,23 @@
    <widget class="QLineEdit" name="txt_surname">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>143</y>
+      <x>170</x>
+      <y>170</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Surname</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>190</y>
-      <width>27</width>
-      <height>20</height>
+      <x>20</x>
+      <y>230</y>
+      <width>61</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -110,20 +124,23 @@
    <widget class="QLineEdit" name="txt_age">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>190</y>
+      <x>170</x>
+      <y>230</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Age</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>237</y>
-      <width>65</width>
-      <height>20</height>
+      <x>20</x>
+      <y>290</y>
+      <width>101</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -133,33 +150,36 @@
    <widget class="QLineEdit" name="txt_phone">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>237</y>
+      <x>170</x>
+      <y>290</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Phone Number</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>370</y>
-      <width>101</width>
-      <height>31</height>
+      <x>200</x>
+      <y>440</y>
+      <width>111</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
-     <string>save</string>
+     <string>Save</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>290</y>
-      <width>81</width>
-      <height>21</height>
+      <x>20</x>
+      <y>350</y>
+      <width>131</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -169,11 +189,14 @@
    <widget class="QLineEdit" name="txt_department">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>290</y>
+      <x>170</x>
+      <y>350</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Department</string>
     </property>
    </widget>
   </widget>
@@ -181,10 +204,15 @@
    <property name="geometry">
     <rect>
      <x>930</x>
-     <y>30</y>
-     <width>93</width>
-     <height>29</height>
+     <y>590</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Back</string>
@@ -193,11 +221,16 @@
   <widget class="QLabel" name="label_sec_status">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>560</y>
-     <width>121</width>
+     <x>20</x>
+     <y>620</y>
+     <width>251</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -206,21 +239,31 @@
   <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>60</y>
-     <width>461</width>
+     <x>50</x>
+     <y>90</y>
+     <width>501</width>
      <height>481</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>560</y>
+     <x>220</x>
+     <y>570</y>
      <width>131</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>LOAD TABLE</string>
@@ -231,32 +274,32 @@
     <rect>
      <x>470</x>
      <y>20</y>
-     <width>82</width>
-     <height>28</height>
+     <width>81</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>70</x>
      <y>20</y>
-     <width>281</width>
-     <height>28</height>
+     <width>381</width>
+     <height>41</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>19</y>
-     <width>71</width>
-     <height>31</height>
-    </rect>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
-   <property name="text">
-    <string>Search:</string>
+   <property name="placeholderText">
+    <string>Search</string>
    </property>
   </widget>
  </widget>
