--- a/Sqlite_DB/record.ui
+++ b/Sqlite_DB/record.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1065</width>
-    <height>664</height>
+    <width>1000</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,14 +17,14 @@
    <property name="geometry">
     <rect>
      <x>740</x>
-     <y>290</y>
+     <y>270</y>
      <width>161</width>
      <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>13</pointsize>
     </font>
    </property>
    <property name="text">
@@ -32,7 +32,7 @@
    </property>
    <property name="icon">
     <iconset resource="img.qrc">
-     <normaloff>:/img/Documents/patient.png</normaloff>:/img/Documents/patient.png</iconset>
+     <normaloff>:/img/img/patient.png</normaloff>:/img/img/patient.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -44,11 +44,16 @@
   <widget class="QPushButton" name="pushButton_1">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>450</y>
+     <x>510</x>
+     <y>420</y>
      <width>151</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>13</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Submit</string>
@@ -57,11 +62,16 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>750</x>
-     <y>450</y>
+     <x>760</x>
+     <y>420</y>
      <width>151</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>13</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Back</string>
@@ -70,15 +80,15 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>373</x>
-     <y>20</y>
-     <width>341</width>
-     <height>41</height>
+     <x>340</x>
+     <y>10</y>
+     <width>411</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>13</pointsize>
+     <pointsize>17</pointsize>
      <bold>true</bold>
      <underline>true</underline>
     </font>
@@ -91,14 +101,14 @@
    <property name="geometry">
     <rect>
      <x>480</x>
-     <y>170</y>
+     <y>140</y>
      <width>161</width>
      <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>13</pointsize>
     </font>
    </property>
    <property name="text">
@@ -119,14 +129,14 @@
    <property name="geometry">
     <rect>
      <x>480</x>
-     <y>290</y>
+     <y>270</y>
      <width>161</width>
      <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>13</pointsize>
     </font>
    </property>
    <property name="text">
@@ -147,14 +157,14 @@
    <property name="geometry">
     <rect>
      <x>740</x>
-     <y>170</y>
+     <y>140</y>
      <width>161</width>
      <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>13</pointsize>
     </font>
    </property>
    <property name="text">
@@ -162,7 +172,7 @@
    </property>
    <property name="icon">
     <iconset resource="img.qrc">
-     <normaloff>:/img/Documents/staff.png</normaloff>:/img/Documents/staff.png</iconset>
+     <normaloff>:/img/img/staff.png</normaloff>:/img/img/staff.png</iconset>
    </property>
    <property name="iconSize">
     <size>
@@ -175,9 +185,9 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>100</y>
+     <y>130</y>
      <width>20</width>
-     <height>491</height>
+     <height>371</height>
     </rect>
    </property>
    <property name="orientation">
@@ -187,7 +197,7 @@
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>60</x>
      <y>200</y>
      <width>261</width>
      <height>151</height>
@@ -204,26 +214,39 @@
 p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;justify&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Hello. You are welcome to our recording system. Here you can keep the record of doctor, nurse, patients and staff by clicking in the respective button. If you want to register member of the respective position, then click on it.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p align=&quot;justify&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Hello. You are welcome to our recording system. Here you can keep the record of doctor, nurse, patients and staff by clicking in the respective button. Also, if you want to register member of the respective position, click on it.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>790</x>
-     <y>600</y>
-     <width>201</width>
-     <height>21</height>
+     <x>-10</x>
+     <y>50</y>
+     <width>241</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>11</pointsize>
+     <pointsize>12</pointsize>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
-    <string>       Admin Dashboard</string>
+    <string>       Admin </string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_2">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>100</y>
+     <width>1011</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
    </property>
   </widget>
  </widget>
