--- a/Sqlite_DB/secdialog.ui
+++ b/Sqlite_DB/secdialog.ui
@@ -16,11 +16,16 @@
   <widget class="QLabel" name="label_third">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>600</y>
-     <width>63</width>
-     <height>20</height>
+     <x>40</x>
+     <y>620</y>
+     <width>211</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -29,22 +34,30 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>100</y>
-     <width>521</width>
-     <height>441</height>
+     <x>630</x>
+     <y>40</y>
+     <width>441</width>
+     <height>511</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="title">
-    <string>GroupBox</string>
+    <string>Patient's Register</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>49</y>
-      <width>16</width>
-      <height>20</height>
+      <y>70</y>
+      <width>51</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -54,20 +67,23 @@
    <widget class="QLineEdit" name="txt_id">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>49</y>
+      <x>120</x>
+      <y>70</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>ID</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>96</y>
-      <width>40</width>
-      <height>20</height>
+      <y>140</y>
+      <width>61</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -77,20 +93,23 @@
    <widget class="QLineEdit" name="txt_name">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>96</y>
+      <x>120</x>
+      <y>140</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Name</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>143</y>
-      <width>58</width>
-      <height>20</height>
+      <y>210</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -100,20 +119,23 @@
    <widget class="QLineEdit" name="txt_surname">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>143</y>
+      <x>120</x>
+      <y>210</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Surname</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>190</y>
-      <width>27</width>
-      <height>20</height>
+      <y>280</y>
+      <width>51</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -123,20 +145,23 @@
    <widget class="QLineEdit" name="txt_age">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>190</y>
+      <x>120</x>
+      <y>280</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Age</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>237</y>
-      <width>65</width>
-      <height>20</height>
+      <y>350</y>
+      <width>101</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -146,35 +171,43 @@
    <widget class="QLineEdit" name="txt_phone">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>237</y>
+      <x>120</x>
+      <y>350</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Phone Number</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>370</y>
-      <width>101</width>
-      <height>31</height>
+      <x>140</x>
+      <y>450</y>
+      <width>111</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
-     <string>save</string>
+     <string>Save</string>
     </property>
    </widget>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>970</x>
-     <y>20</y>
-     <width>83</width>
-     <height>29</height>
+     <x>932</x>
+     <y>598</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Back</string>
@@ -183,21 +216,31 @@
   <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>20</x>
      <y>60</y>
-     <width>561</width>
-     <height>531</height>
+     <width>551</width>
+     <height>491</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>322</x>
-     <y>600</y>
-     <width>131</width>
-     <height>31</height>
+     <x>200</x>
+     <y>570</y>
+     <width>141</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>LOAD TABLE</string>
@@ -206,34 +249,52 @@
   <widget class="QComboBox" name="cbColumnas">
    <property name="geometry">
     <rect>
-     <x>560</x>
-     <y>20</y>
+     <x>500</x>
+     <y>7</y>
      <width>82</width>
-     <height>28</height>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>20</y>
-     <width>341</width>
-     <height>31</height>
+     <x>50</x>
+     <y>7</y>
+     <width>431</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="placeholderText">
+    <string>Search</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QPushButton" name="pushButton_4">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>20</y>
-     <width>81</width>
-     <height>31</height>
+     <x>660</x>
+     <y>598</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="text">
-    <string>Search:</string>
+    <string>Send</string>
    </property>
   </widget>
  </widget>
