--- a/Sqlite_DB/staffinfo.ui
+++ b/Sqlite_DB/staffinfo.ui
@@ -16,11 +16,16 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>540</x>
-     <y>60</y>
-     <width>521</width>
-     <height>461</height>
+     <x>570</x>
+     <y>30</y>
+     <width>481</width>
+     <height>511</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="title">
     <string>                                            Staff Registration</string>
@@ -28,10 +33,10 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>49</y>
-      <width>16</width>
-      <height>20</height>
+      <x>20</x>
+      <y>50</y>
+      <width>51</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -41,20 +46,23 @@
    <widget class="QLineEdit" name="txt_id">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>49</y>
+      <x>170</x>
+      <y>50</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>ID</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>96</y>
-      <width>40</width>
-      <height>20</height>
+      <x>20</x>
+      <y>110</y>
+      <width>61</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -64,20 +72,23 @@
    <widget class="QLineEdit" name="txt_name">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>96</y>
+      <x>170</x>
+      <y>110</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Name</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>143</y>
-      <width>58</width>
-      <height>20</height>
+      <x>20</x>
+      <y>170</y>
+      <width>91</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -87,20 +98,23 @@
    <widget class="QLineEdit" name="txt_surname">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>143</y>
+      <x>170</x>
+      <y>170</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Surname</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>190</y>
-      <width>27</width>
-      <height>20</height>
+      <x>20</x>
+      <y>230</y>
+      <width>61</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -110,20 +124,23 @@
    <widget class="QLineEdit" name="txt_age">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>190</y>
+      <x>170</x>
+      <y>230</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Age</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>14</x>
-      <y>237</y>
-      <width>65</width>
-      <height>20</height>
+      <x>20</x>
+      <y>290</y>
+      <width>101</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -133,20 +150,23 @@
    <widget class="QLineEdit" name="txt_phone">
     <property name="geometry">
      <rect>
-      <x>86</x>
-      <y>237</y>
+      <x>170</x>
+      <y>290</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Phone Number</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>370</y>
-      <width>101</width>
-      <height>31</height>
+      <x>200</x>
+      <y>440</y>
+      <width>111</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
@@ -156,10 +176,10 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>290</y>
-      <width>91</width>
-      <height>21</height>
+      <x>20</x>
+      <y>350</y>
+      <width>131</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -169,22 +189,30 @@
    <widget class="QLineEdit" name="txt_phone_2">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>290</y>
+      <x>170</x>
+      <y>350</y>
       <width>251</width>
-      <height>28</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Department</string>
     </property>
    </widget>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>940</x>
-     <y>20</y>
-     <width>93</width>
-     <height>29</height>
+     <x>930</x>
+     <y>590</y>
+     <width>111</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Back</string>
@@ -193,11 +221,16 @@
   <widget class="QLabel" name="label_third">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>540</y>
-     <width>111</width>
+     <x>40</x>
+     <y>620</y>
+     <width>211</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -206,31 +239,46 @@
   <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>20</x>
      <y>60</y>
-     <width>461</width>
+     <width>551</width>
      <height>491</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QComboBox" name="cbColumnas">
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>20</y>
+     <x>500</x>
+     <y>7</y>
      <width>82</width>
-     <height>28</height>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>560</y>
-     <width>101</width>
-     <height>31</height>
+     <x>200</x>
+     <y>570</y>
+     <width>141</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>LOAD TABLE</string>
@@ -239,24 +287,19 @@
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>20</y>
-     <width>341</width>
-     <height>31</height>
+     <x>50</x>
+     <y>7</y>
+     <width>431</width>
+     <height>41</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>20</y>
-     <width>63</width>
-     <height>20</height>
-    </rect>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
-   <property name="text">
-    <string>Search:</string>
+   <property name="placeholderText">
+    <string>Search</string>
    </property>
   </widget>
  </widget>
